--- a/src/main/resources/com/example/hellofx/ticket_counter.fxml
+++ b/src/main/resources/com/example/hellofx/ticket_counter.fxml
@@ -20,19 +20,19 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane prefHeight="760.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.hellofx.TicketCounterController">
+<BorderPane prefHeight="760.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.hellofx.TicketCounterController">
    <center>
       <ScrollPane focusTraversable="false" hbarPolicy="NEVER" prefHeight="644.0" prefWidth="1000.0" BorderPane.alignment="CENTER">
          <content>
             <AnchorPane prefHeight="617.0" prefWidth="1000.0">
                <children>
-                  <VBox layoutX="736.0" layoutY="31.0" prefHeight="520.0" prefWidth="250.0" style="-fx-background-color: white; -fx-background-radius: 10;" AnchorPane.rightAnchor="35.0">
+                  <VBox layoutX="688.0" layoutY="31.0" prefHeight="520.0" prefWidth="280.0" style="-fx-background-color: white; -fx-background-radius: 10;" AnchorPane.rightAnchor="32.0">
                      <children>
-                        <GridPane fx:id="seatGrid" alignment="CENTER" prefHeight="490.0" prefWidth="384.0">
+                        <GridPane fx:id="seatGrid" alignment="CENTER" prefHeight="520.0">
                           <columnConstraints>
                             <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                               <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="70.0" />
                               <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                               <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                               <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -50,7 +50,7 @@
                               <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
                           </rowConstraints>
                            <padding>
-                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                              <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                            </padding>
                         </GridPane>
                      </children>
